desabilita inputs de resultado

--- a/src/app/placa-automovel-antiga/placa-automovel-antiga.component.html
+++ b/src/app/placa-automovel-antiga/placa-automovel-antiga.component.html
@@ -6,6 +6,6 @@
 
   <label
     >Resultado
-    <input [ngModel]="placaAntiga | placaAutomovelAntiga" />
+    <input [ngModel]="placaAntiga | placaAutomovelAntiga" disabled />
   </label>
 </div>
