--- a/src/app/placa-automovel-mercosul/placa-automovel-mercosul.component.html
+++ b/src/app/placa-automovel-mercosul/placa-automovel-mercosul.component.html
@@ -6,6 +6,6 @@
 
   <label
     >Resultado
-    <input [ngModel]="placaMercosul | placaAutomovelMercosul" />
+    <input [ngModel]="placaMercosul | placaAutomovelMercosul" disabled />
   </label>
 </div>
