--- a/src/app/telefone-br/telefone-br.component.html
+++ b/src/app/telefone-br/telefone-br.component.html
@@ -6,6 +6,6 @@
 
   <label
     >Resultado
-    <input [ngModel]="telefone | telefoneBR" />
+    <input [ngModel]="telefone | telefoneBR" disabled />
   </label>
 </div>
